[package]
name = "server"
version = "0.1.0"
authors = ["huhn511 <sehe89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.2"
actix-files = "0.3"
actix-cors = "0.5.4"
env_logger = "0.8"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
failure = "0.1.8"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.3"

[dev-dependencies]
actix-rt = "1"