[package]
name = "server"
version = "0.1.0"
authors = ["huhn511 <sehe89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
tokio = "1.6.0"
sanitize-filename = "0.2"
actix-files = "0.3"
actix-cors = "0.5.4"
env_logger = "0.8"

diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "r2d2", "numeric"] }
#diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "numeric"] }
dotenv = "0.15"
failure = "0.1.8"
r2d2 = "0.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

uuid = { version = "0.7", features = ["serde", "v4"] }

#uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.3"

structopt = "0.3"

anyhow = "1.0"
thiserror = "1.0"

rusoto_core = { version = "0.46.0" }
rusoto_s3 = { version = "0.46.0" }

[dev-dependencies]
actix-rt = "1"